Update: CategoryServiceImpl (not use mapstruct)